--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,19 +24,27 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  dio: ^3.0.9
+  flushbar: ^1.10.4  
+  flutter_mobx: 1.1.0+2  
+  font_awesome_flutter: ^8.8.1
+  mobx: ^1.2.1+4
+  retrofit: any
+  shared_preferences: any
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  build_runner: any
+  flutter_launcher_icons: ^0.7.4
+  mobx_codegen: ^1.0.0
+  retrofit_generator: any
 
-# The following section is specific to Flutter.
+
+
 flutter:
 
   # The following line ensures that the Material Icons font is
