--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
-            <meta-data android:name="com.google.android.geo.API_KEY"
+            <!-- <meta-data android:name="com.google.android.geo.API_KEY" -->
+            <meta-data android:name="com.google.android.geo.AIzaSyC_QSyzEjcE4Bmz6sGgvQyc6aYzEaAp9z0"
               android:value="AIzaSyC_QSyzEjcE4Bmz6sGgvQyc6aYzEaAp9z0"/>
         </activity>
         <!-- Don't delete the meta-data below.
