Altera cor do mapa para dark mode e padroniza o app para o modo dark

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   geoflutterfire: ^2.2.2
   geolocator: ^6.2.1
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -61,6 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/images/
+    - lib/assets/txt/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
