--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   geoflutterfire: ^2.2.2
   geolocator: ^6.2.1
   flutter_svg: ^0.18.0
+  sliding_up_panel: ^1.0.2
+  day_night_switcher: ^0.1.1+1
 
 dev_dependencies:
   flutter_test:
