--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   firebase_core: ^0.7.0
   cloud_firestore: 0.16.0+1
   google_maps_flutter: ^1.2.0
-  geoflutterfire: ^2.2.2
+  # geoflutterfire: ^2.2.2
   geolocator: ^6.2.1
+  permission_handler: ^5.1.0+1
   flutter_svg: ^0.18.0
 
 dev_dependencies:
