--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geolocator: ^6.2.1
   permission_handler: ^5.1.0+1
   flutter_svg: ^0.18.0
+  mask_text_input_formatter: ^1.2.1
 
 dev_dependencies:
   flutter_test:
