Adiciona splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^0.18.0
   mask_text_input_formatter: ^1.2.1
   timeago: ^2.0.30
+  animated_splash_screen: ^1.0.1+2
 
 dev_dependencies:
   flutter_test:
