--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dev_dependencies:
   mobx_codegen: ^1.0.0
   retrofit_generator: any
 
+flutter_icons:
+  android: 'launcher_icon'
+  ios: true
+  image_path: 'lib/assets/images/logo.png'  
+
 
 
 flutter:
