--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dev_dependencies:
 flutter_icons:
   android: 'launcher_icon'
   ios: true
-  image_path: 'lib/assets/images/logo.png'  
+  image_path: 'lib/assets/images/icon.png'  
 
 
 
